--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,11 +18,11 @@ repos:
     hooks:
       - id: checkov
 
-  - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.104.0
-    hooks:
-      - id: terraform_fmt
-      - id: terraform_validate
+  # - repo: https://github.com/antonbabenko/pre-commit-terraform
+  #   rev: v1.104.0
+  #   hooks:
+  #     - id: terraform_fmt
+  #     - id: terraform_validate
 
   - repo: local
     hooks:
