--- a/yamls/coredns-values.yaml
+++ b/yamls/coredns-values.yaml
@@ -1,39 +1,225 @@
-service:
-  clusterIP: ${cluster_dns_ip}
-serviceAccount:
-  create: true
-  name: coredns
+# =============================================================================
+# CoreDNS Helm Chart Values
+# Chart: https://github.com/coredns/helm
+# =============================================================================
+# Legend:
+#   [CUSTOM]  - Values modified from chart defaults for this module
+#   [DEFAULT] - Chart default values (included for reference)
+#   ${var}    - Terraform templatefile variables
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Image Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+image:
+  repository: coredns/coredns                                 # [DEFAULT]
+  # tag: ""                                                   # [DEFAULT] Uses appVersion
+  pullPolicy: IfNotPresent                                    # [DEFAULT]
+
+imagePullSecrets: []                                          # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Deployment Configuration
+# -----------------------------------------------------------------------------
+replicaCount: 2                                               # [CUSTOM] HA mode (default is 1)
+
+# Deployment name override
 deployment:
-  name: coredns
-replicaCount: 2
+  name: coredns                                               # [CUSTOM] Match EKS default name
+  annotations: {}                                             # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Service Account Configuration
+# -----------------------------------------------------------------------------
+serviceAccount:
+  create: true                                                # [DEFAULT]
+  name: coredns                                               # [CUSTOM]
+  annotations: {}                                             # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# RBAC Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+rbac:
+  create: true                                                # [DEFAULT]
+  pspEnable: false                                            # [DEFAULT] PSP deprecated in K8s 1.25+
+
+# -----------------------------------------------------------------------------
+# Service Configuration
+# -----------------------------------------------------------------------------
+isClusterService: true                                        # [DEFAULT] Acts as cluster DNS
+serviceType: ClusterIP                                        # [DEFAULT]
+servicePort: 53                                               # [DEFAULT]
+serviceProtocol: UDP                                          # [DEFAULT]
+
+service:
+  name: kube-dns                                              # [DEFAULT] Standard K8s DNS service name
+  clusterIP: ${cluster_dns_ip}                                # [CUSTOM] Calculated from service CIDR
+  annotations: {}                                             # [DEFAULT]
+
+# Additional service for TCP DNS
+serviceTcp:
+  enabled: true                                               # [DEFAULT]
+  annotations: {}                                             # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Pod Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+podLabels: {}                                                 # [DEFAULT]
+podAnnotations: {}                                            # [DEFAULT]
+
+podSecurityContext: {}                                        # [DEFAULT]
+
+securityContext:
+  allowPrivilegeEscalation: false                             # [DEFAULT]
+  readOnlyRootFilesystem: true                                # [DEFAULT]
+  capabilities:
+    add:
+      - NET_BIND_SERVICE                                      # [DEFAULT] Allow binding to port 53
+    drop:
+      - ALL                                                   # [DEFAULT]
+
+priorityClassName: system-cluster-critical                    # [DEFAULT]
+
+terminationGracePeriodSeconds: 30                             # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Resource Limits
+# -----------------------------------------------------------------------------
 resources:
   limits:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 100m                                                 # [CUSTOM] (default is higher)
+    memory: 128Mi                                             # [CUSTOM]
   requests:
-    cpu: 100m
-    memory: 70Mi
+    cpu: 100m                                                 # [CUSTOM]
+    memory: 70Mi                                              # [CUSTOM]
+
+# -----------------------------------------------------------------------------
+# Node Scheduling [DEFAULT]
+# -----------------------------------------------------------------------------
+nodeSelector: {}                                              # [DEFAULT]
+tolerations:
+  - key: CriticalAddonsOnly                                   # [DEFAULT]
+    operator: Exists
+  - effect: NoSchedule                                        # [DEFAULT]
+    key: node-role.kubernetes.io/control-plane
+affinity: {}                                                  # [DEFAULT]
+topologySpreadConstraints: []                                 # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Probes Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+livenessProbe:
+  enabled: true                                               # [DEFAULT]
+  httpGet:
+    path: /health                                             # [DEFAULT]
+    port: 8080                                                # [DEFAULT]
+    scheme: HTTP                                              # [DEFAULT]
+  initialDelaySeconds: 60                                     # [DEFAULT]
+  periodSeconds: 10                                           # [DEFAULT]
+  timeoutSeconds: 5                                           # [DEFAULT]
+  failureThreshold: 5                                         # [DEFAULT]
+  successThreshold: 1                                         # [DEFAULT]
+
+readinessProbe:
+  enabled: true                                               # [DEFAULT]
+  httpGet:
+    path: /ready                                              # [DEFAULT]
+    port: 8181                                                # [DEFAULT]
+    scheme: HTTP                                              # [DEFAULT]
+  initialDelaySeconds: 30                                     # [DEFAULT]
+  periodSeconds: 10                                           # [DEFAULT]
+  timeoutSeconds: 5                                           # [DEFAULT]
+  failureThreshold: 5                                         # [DEFAULT]
+  successThreshold: 1                                         # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# HPA Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+autoscaling:
+  enabled: false                                              # [DEFAULT]
+  minReplicas: 1                                              # [DEFAULT]
+  maxReplicas: 5                                              # [DEFAULT]
+  targetCPU: 80                                               # [DEFAULT]
+  targetMemory: ""                                            # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Pod Disruption Budget [DEFAULT]
+# -----------------------------------------------------------------------------
+podDisruptionBudget:
+  enabled: false                                              # [DEFAULT]
+  minAvailable: 1                                             # [DEFAULT]
+  # maxUnavailable: 1                                         # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# CoreDNS Server Configuration
+# -----------------------------------------------------------------------------
 servers:
   - zones:
-      - zone: .
-    port: 53
+      - zone: .                                               # [DEFAULT] Root zone
+    port: 53                                                  # [DEFAULT]
     plugins:
-      - name: errors
-      - name: health
-        configBlock: lameduck 5s
-      - name: ready
-      - name: kubernetes
-        parameters: cluster.local in-addr.arpa ip6.arpa
+      # Error logging
+      - name: errors                                          # [DEFAULT]
+
+      # Health check endpoint (/health on port 8080)
+      - name: health                                          # [DEFAULT]
+        configBlock: lameduck 5s                              # [CUSTOM]
+
+      # Readiness endpoint (/ready on port 8181)
+      - name: ready                                           # [DEFAULT]
+
+      # Kubernetes cluster DNS resolution
+      - name: kubernetes                                      # [DEFAULT]
+        parameters: cluster.local in-addr.arpa ip6.arpa       # [DEFAULT]
         configBlock: |-
           pods insecure
           fallthrough in-addr.arpa ip6.arpa
           ttl 30
-      - name: prometheus
-        parameters: 0.0.0.0:9153
-      - name: forward
-        parameters: . /etc/resolv.conf
-      - name: cache
-        parameters: 30
-      - name: loop
-      - name: reload
-      - name: loadbalance
+
+      # Prometheus metrics endpoint
+      - name: prometheus                                      # [DEFAULT]
+        parameters: 0.0.0.0:9153                              # [DEFAULT]
+
+      # Forward external queries to upstream DNS
+      - name: forward                                         # [DEFAULT]
+        parameters: . /etc/resolv.conf                        # [DEFAULT]
+
+      # DNS response caching
+      - name: cache                                           # [DEFAULT]
+        parameters: 30                                        # [CUSTOM] Cache TTL in seconds
+
+      # Detect and break DNS loops
+      - name: loop                                            # [DEFAULT]
+
+      # Hot reload Corefile changes
+      - name: reload                                          # [DEFAULT]
+
+      # Round-robin DNS load balancing
+      - name: loadbalance                                     # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Additional Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+extraConfig: {}                                               # [DEFAULT] Additional Corefile config
+
+extraVolumes: []                                              # [DEFAULT]
+extraVolumeMounts: []                                         # [DEFAULT]
+extraSecrets: []                                              # [DEFAULT]
+
+zoneFiles: []                                                 # [DEFAULT] Custom zone files
+
+# -----------------------------------------------------------------------------
+# Prometheus/Monitoring [DEFAULT]
+# -----------------------------------------------------------------------------
+prometheus:
+  service:
+    enabled: false                                            # [DEFAULT]
+    annotations:
+      prometheus.io/scrape: "true"                            # [DEFAULT]
+      prometheus.io/port: "9153"                              # [DEFAULT]
+
+  monitor:
+    enabled: false                                            # [DEFAULT]
+    additionalLabels: {}                                      # [DEFAULT]
+    namespace: ""                                             # [DEFAULT]
+    interval: ""                                              # [DEFAULT]
