--- a/yamls/vpc-cni-values.yaml
+++ b/yamls/vpc-cni-values.yaml
@@ -1,12 +1,177 @@
+# =============================================================================
+# AWS VPC CNI Helm Chart Values
+# Chart: https://github.com/aws/amazon-vpc-cni-k8s/tree/master/charts/aws-vpc-cni
+# =============================================================================
+# Legend:
+#   [CUSTOM]  - Values modified from chart defaults for this module
+#   [DEFAULT] - Chart default values (included for reference)
+#   ${var}    - Terraform templatefile variables
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Image Configuration
+# -----------------------------------------------------------------------------
 init:
   image:
-    region: ${region}
+    region: ${region}                                         # [CUSTOM] Match cluster region
+    account: 602401143452                                     # [DEFAULT] The account ID 602401143452 is AWS's official EKS ECR account that hosts the VPC CNI container images.
+    # tag: ""                                                 # [DEFAULT] Uses appVersion
+    pullPolicy: IfNotPresent                                  # [DEFAULT]
+
 image:
-  region: ${region}
+  region: ${region}                                           # [CUSTOM] Match cluster region
+  account: 602401143452                                       # [DEFAULT] The account ID 602401143452 is AWS's official EKS ECR account that hosts the VPC CNI container images.
+  # tag: ""                                                   # [DEFAULT] Uses appVersion
+  pullPolicy: IfNotPresent                                    # [DEFAULT]
+
+imagePullSecrets: []                                          # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Naming Overrides
+# -----------------------------------------------------------------------------
+nameOverride: aws-node                                        # [DEFAULT]
+fullnameOverride: aws-node                                    # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Service Account Configuration
+# -----------------------------------------------------------------------------
 serviceAccount:
-  create: false
-  name: aws-node
-originalMatchLabels: true
+  create: false                                               # [CUSTOM] Use pre-existing aws-node SA
+  name: aws-node                                              # [CUSTOM] Pre-existing service account
+  annotations: {}                                             # [DEFAULT] IRSA annotation added separately
+
+# -----------------------------------------------------------------------------
+# CRD Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+crd:
+  create: true                                                # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Pod Configuration
+# -----------------------------------------------------------------------------
+originalMatchLabels: true                                     # [CUSTOM] Required for EKS upgrade scenarios
+
+podLabels: {}                                                 # [DEFAULT]
+podAnnotations: {}                                            # [DEFAULT]
+
+podSecurityContext: {}                                        # [DEFAULT]
+
+securityContext:
+  privileged: true                                            # [DEFAULT] Required for network config
+  capabilities:
+    add:
+      - NET_ADMIN                                             # [DEFAULT]
+      - NET_RAW                                               # [DEFAULT]
+
+priorityClassName: system-node-critical                       # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# DaemonSet Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+updateStrategy:
+  type: RollingUpdate                                         # [DEFAULT]
+  rollingUpdate:
+    maxUnavailable: 10%                                       # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Resource Limits [DEFAULT]
+# -----------------------------------------------------------------------------
+resources:
+  requests:
+    cpu: 25m                                                  # [DEFAULT]
+    memory: 64Mi                                              # [DEFAULT]
+  limits:
+    cpu: 100m                                                 # [DEFAULT]
+    memory: 128Mi                                             # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Node Scheduling [DEFAULT]
+# -----------------------------------------------------------------------------
+nodeSelector: {}                                              # [DEFAULT]
+tolerations:
+  - operator: Exists                                          # [DEFAULT] Tolerate all taints
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/os                           # [DEFAULT]
+              operator: In
+              values:
+                - linux
+            - key: eks.amazonaws.com/compute-type             # [DEFAULT]
+              operator: NotIn
+              values:
+                - fargate
+
+# -----------------------------------------------------------------------------
+# CNI Environment Variables
+# -----------------------------------------------------------------------------
 env:
-  ENABLE_PREFIX_DELEGATION: "true"
-  WARM_PREFIX_TARGET: "1"
+  # IP Address Management
+  ENABLE_PREFIX_DELEGATION: "true"                            # [CUSTOM] Enable /28 prefix per ENI
+  WARM_PREFIX_TARGET: "1"                                     # [CUSTOM] Number of warm prefixes
+  WARM_IP_TARGET: "1"                                         # [DEFAULT]
+  MINIMUM_IP_TARGET: "1"                                      # [DEFAULT]
+
+  # Networking Configuration
+  AWS_VPC_K8S_CNI_LOGLEVEL: DEBUG                             # [DEFAULT]
+  AWS_VPC_K8S_CNI_VETHPREFIX: eni                             # [DEFAULT]
+  AWS_VPC_ENI_MTU: "9001"                                     # [DEFAULT] Jumbo frames
+
+  # External SNAT Configuration
+  AWS_VPC_K8S_CNI_EXTERNALSNAT: "false"                       # [DEFAULT]
+
+  # Custom Networking (for ENIConfig)
+  AWS_VPC_K8S_CNI_CUSTOM_NETWORK_CFG: "false"                 # [DEFAULT]
+  ENI_CONFIG_LABEL_DEF: topology.kubernetes.io/zone           # [DEFAULT]
+
+  # Network Policy Support
+  ENABLE_NETWORK_POLICY: "false"                              # [DEFAULT]
+
+  # IPv6 Configuration
+  ENABLE_IPV4: "true"                                         # [DEFAULT]
+  ENABLE_IPV6: "false"                                        # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# ENIConfig Custom Networking [DEFAULT]
+# -----------------------------------------------------------------------------
+eniConfig:
+  create: false                                               # [DEFAULT]
+  region: us-west-2                                           # [DEFAULT]
+  subnets: {}                                                 # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Service Configuration [DEFAULT]
+# -----------------------------------------------------------------------------
+livenessProbe:
+  exec:
+    command:
+      - /app/grpc-health-probe
+      - -addr=:50051
+      - -connect-timeout=5s
+      - -rpc-timeout=5s                                       # [DEFAULT]
+  initialDelaySeconds: 60                                     # [DEFAULT]
+  timeoutSeconds: 10                                          # [DEFAULT]
+
+readinessProbe:
+  exec:
+    command:
+      - /app/grpc-health-probe
+      - -addr=:50051
+      - -connect-timeout=5s
+      - -rpc-timeout=5s                                       # [DEFAULT]
+  initialDelaySeconds: 1                                      # [DEFAULT]
+  timeoutSeconds: 10                                          # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Additional Volumes [DEFAULT]
+# -----------------------------------------------------------------------------
+extraVolumes: []                                              # [DEFAULT]
+extraVolumeMounts: []                                         # [DEFAULT]
+
+# -----------------------------------------------------------------------------
+# Metrics/Monitoring [DEFAULT]
+# -----------------------------------------------------------------------------
+serviceMonitor:
+  enabled: false                                              # [DEFAULT]
